<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.androidclient.Activity2"
    android:background="#ff000000">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/LinearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="0"
        android:layout_marginTop="400dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:text="@string/totolagrenouille"
            android:id="@+id/LectureButton"
            android:layout_gravity="bottom"
            android:layout_weight="5"
            android:textColor="#fffdffff" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:text="@string/pauseRessource"
            android:id="@+id/pauseButton"
            android:layout_gravity="bottom"
            android:layout_weight="5"
            android:textColor="#fffdffff" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:text="@string/stopRessource"
            android:id="@+id/StopButton"
            android:layout_gravity="bottom"
            android:layout_weight="5"
            android:textColor="#fffdffff" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignBottom="@+id/LinearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="94dp"
        android:layout_marginTop="320dp"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/prevRessource"
            android:id="@+id/prevButton"
            android:layout_weight="1"
            android:textColor="#fffdffff" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DeconnectionString"
            android:id="@+id/decoButton"
            android:layout_weight="1"
            android:textColor="#fffdffff" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/nextRessource"
            android:id="@+id/nextButton"
            android:layout_weight="1"
            android:textColor="#fffdffff" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignBottom="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="300dp"
        android:id="@+id/linearLayout2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/MonitorTextView"
            android:id="@+id/monitorTextView"
            android:layout_weight="5"
            android:textIsSelectable="false"
            android:textColor="#fffdffff" />
    </LinearLayout>

</RelativeLayout>
